Fix HTML formatting and update gold price section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>Harga Emas Hari Ini</h1>
   <div class="label">Emas 999 / 24K per gram:</div>
   <div id="goldPrice" class="price">-</div>
-  <div class="note">Harga dikemas kini berdasarkan sumber dalam talian.</div>
+  <div class="note">Harga dikemas kini berdasarkan sumber dalam talian.019809409</div>
 
   <script>
     // Contoh nilai hardcoded — anda boleh gantikan dengan fetch dari API sebenar
@@ -24,3 +24,4 @@
   </script>
 </body>
 </html>
+
